--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -28,6 +28,7 @@ jobs:
             libssh2-1-dev \
             libcurl4-openssl-dev \
             libboost-all-dev \
+            libgtk2.0-dev \
             libgtk-3-dev \
             libglib2.0-dev \
             libsm-dev \
