--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -5,7 +5,6 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-  # 也可以手动点按钮触发
   workflow_dispatch:
 
 jobs:
@@ -22,6 +21,7 @@ jobs:
           sudo apt-get install -y \
             build-essential \
             pkg-config \
+            g++-12 \
             libssl-dev \
             libpsl-dev \
             libidn2-dev \
@@ -34,15 +34,15 @@ jobs:
             libsm-dev \
             zlib1g-dev
 
-      - name: Build wxWidgets 3.3.1 (static)
+      - name: Build wxWidgets 3.3.1 (static, no exceptions)
         run: |
           wget https://github.com/wxWidgets/wxWidgets/releases/download/v3.3.1/wxWidgets-3.3.1.tar.bz2
           tar xf wxWidgets-3.3.1.tar.bz2
           cd wxWidgets-3.3.1
           mkdir build-gtk
           cd build-gtk
-          # 静态库 + 默认是 Unicode，不用特别开
-          ../configure --disable-shared
+          # 关键：禁用 shared + 禁用 wx 自己的异常处理
+          ../configure --disable-shared --disable-exceptions
           make -j"$(nproc)"
           sudo make install
           sudo ldconfig
@@ -50,7 +50,8 @@ jobs:
       - name: Build FreeFileSync
         working-directory: FreeFileSync/Source
         env:
-          CXXFLAGS: "-std=c++2a"
+          # 关键：用 g++-12，而不是系统默认的 g++
+          CXX: g++-12
         run: |
           make -j"$(nproc)"
           echo "Build output:"
