--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -34,15 +34,15 @@ jobs:
             libsm-dev \
             zlib1g-dev
 
-      - name: Build wxWidgets 3.3.1 (static, no exceptions)
+      - name: Build wxWidgets 3.3.1 (static, GTK2, no exceptions)
         run: |
           wget https://github.com/wxWidgets/wxWidgets/releases/download/v3.3.1/wxWidgets-3.3.1.tar.bz2
           tar xf wxWidgets-3.3.1.tar.bz2
           cd wxWidgets-3.3.1
           mkdir build-gtk
           cd build-gtk
-          # 关键：禁用 shared + 禁用 wx 自己的异常处理
-          ../configure --disable-shared --disable-exceptions
+          # 关键：GTK2 + 禁用 shared + 禁用 wx 自己的异常处理
+          ../configure --disable-shared --disable-exceptions --with-gtk=2
           make -j"$(nproc)"
           sudo make install
           sudo ldconfig
