--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -49,7 +49,7 @@ jobs:
         working-directory: FreeFileSync/Source
         run: |
           # 在 wx+/dc.h 里强行定义 wxHAS_DPI_INDEPENDENT_PIXELS，绕过 #error
-          sed -i 's/#include <wx\/dcscreen.h>/#include <wx\/dcscreen.h>\n#define wxHAS_DPI_INDEPENDENT_PIXELS 1/' /usr/local/include/wx-3.3/wx/dc.h
+          sudo sed -i 's/#include <wx\/dcscreen.h>/#include <wx\/dcscreen.h>\n#define wxHAS_DPI_INDEPENDENT_PIXELS 1/' /usr/local/include/wx-3.3/wx/dc.h
 
       - name: Build FreeFileSync
         working-directory: FreeFileSync/Source
